Test that fail due to lack of thread safety.