@@ -21,6 +21,8 @@
 
 package net.sourceforge.cobertura.coveragedata;
 
+import java.util.concurrent.atomic.AtomicReference;
+
 import junit.framework.TestCase;
 
 public class SwitchDataTest extends TestCase
@@ -33,7 +35,7 @@ public class SwitchDataTest extends TestCase
 	public void testEquals()
 	{
 		assertFalse(a.equals(null));
-		assertFalse(a.equals(new Integer(4)));
+		assertFalse(a.equals(Integer.valueOf(4)));
 
 		assertTrue(a.equals(a));
 		assertFalse(a.equals(b));
@@ -147,5 +149,82 @@ public class SwitchDataTest extends TestCase
 		assertEquals(1, a.getHits(5));
 		assertEquals(2, a.getDefaultHits());
 	}
+	
+	private static void touchIteratively(SwitchData data, int num)
+	{
+		/*
+		 * When this test fails, it usually does so well before 2000 iterations.   If it
+		 * gets past 2000, it will usually pass, so there is not much need in going much
+		 * past 2000.
+		 */
+		for (int i=0; i<2000; i++)
+		{
+			/*
+			 * The following yield is needed to make sure the other thread gets
+			 * some CPU.  Otherwise, this thread will get too much of a jump ahead
+			 * of the other thread.
+			 */
+			Thread.yield(); 
+			
+			data.touchBranch(i);
+		}
+	}
+	
+	private void runTestWithTwoThreads() throws Throwable
+	{
+		final SwitchData data = new SwitchData(2);
+		final AtomicReference<Throwable> possibleThrowable = new AtomicReference<Throwable>();
+		
+		ThreadGroup threadGroup = new ThreadGroup("TestThreadGroup") {
+			public void uncaughtException(Thread thread, Throwable t)
+			{
+				/*
+				 * Save the Throwable for later use and interrupt this thread so it exits
+				 */
+				possibleThrowable.set(t);
+				thread.interrupt();
+			}
+		};
+		
+		/*
+		 * Create two threads using the above thread group
+		 */
+		Thread thread1 = new Thread(threadGroup, "1") {
+			public void run()
+			{
+				touchIteratively(data, 0);
+			}
+		};
+		Thread thread2 = new Thread(threadGroup, "2") {
+			public void run()
+			{
+				touchIteratively(data, 1);
+			}
+		};
+		thread1.start();
+		thread2.start();
+		/*
+		 * Wait for the threads to exit
+		 */
+		if (thread1.isAlive()) thread1.join();
+		if (thread2.isAlive()) thread2.join();
+		Throwable t = possibleThrowable.get();
+		if (t != null)
+		{
+			throw t;
+		}
+	}
 
+	public void testMultiThreaded() throws Throwable
+	{
+		/*
+		 * This test will often pass with only one iteration.
+		 * It passes once in a while with 4.   It never passes
+		 * with 10 (I hope).
+		 */
+		for (int i=0; i<10; i++)
+		{
+			runTestWithTwoThreads();
+		}
+	}
 }
